# multi_target_tracker

./: CMakeLists.txt  README.md
config/: kalman_param.txt
src/: detection.h  drawing.cpp  drawing.h  entity.h  group_track.cpp  group_track.h  hungarianAlg.cpp  hungarianAlg.h  hypothesis.cpp  hypothesis.h  imagemanager.h  kalman.cpp  kalman.h  kalman_param.cpp  kalman_param.h  lap.cpp  lap.h  main.cpp  track.cpp  track.h  tracker.cpp  tracker.h  utils.h
